[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/img/generic_items/calculator.png" type="Texture" id=1]
[ext_resource path="res://assets/img/generic_items/camera.png" type="Texture" id=2]
[ext_resource path="res://assets/img/generic_items/phone.png" type="Texture" id=3]
[ext_resource path="res://assets/img/generic_items/old_monitor.png" type="Texture" id=4]
[ext_resource path="res://assets/img/generic_items/music_palyer.png" type="Texture" id=5]
[ext_resource path="res://assets/img/generic_items/notebook.png" type="Texture" id=6]
[ext_resource path="res://scripts/Devices.gd" type="Script" id=7]
[ext_resource path="res://assets/img/generic_items/monitor.png" type="Texture" id=8]
[ext_resource path="res://assets/img/generic_items/controller.png" type="Texture" id=9]
[ext_resource path="res://assets/img/generic_items/headphones.png" type="Texture" id=10]
[ext_resource path="res://assets/img/progsource/wash_machine.png" type="Texture" id=11]
[ext_resource path="res://assets/img/progsource/metal_table.png" type="Texture" id=12]
[ext_resource path="res://assets/img/progsource/screw.png" type="Texture" id=13]
[ext_resource path="res://assets/img/progsource/displays.png" type="Texture" id=14]

[node name="Devices" type="Node2D"]
script = ExtResource( 7 )

[node name="Calculator" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Controller" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="Headphones" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="Monitor" type="Sprite" parent="."]
texture = ExtResource( 8 )

[node name="MusicPlayer" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Notebook" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="OldMonitor" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Phone" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Displays" type="Sprite" parent="."]
texture = ExtResource( 14 )

[node name="MetalTable" type="Sprite" parent="."]
texture = ExtResource( 12 )

[node name="Screw" type="Sprite" parent="."]
texture = ExtResource( 13 )

[node name="WashMachine" type="Sprite" parent="."]
texture = ExtResource( 11 )
